# vLLMserver

./: .env.dev  .env.example  .env.prod  .gitignore  CHANGES.md  CUDA_FORK_FIX.md  CUDA_PRODUCTION_SETUP.md  ENDPOINTS.md  FILES_CHANGED.md  FIXES_AND_CHANGES.md  FIXES_AND_CONFIG.md  PRODUCTION_FEATURES.md  PYTHON313_COMPATIBILITY.md  PYTHON313_UPDATE.md  README.md  SETUP.md  main.py  pyproject.toml
app/: auth.py  cache.py  config.py  llm_init.py  main.py  metrics.py  mock_vllm.py  models.py  platform_detect.py  rate_limit.py  vllm_imports.py
app/routers/: chat.py  embeddings.py  models.py
app/services/: embedding.py  llm.py
scripts/: README.md  dev.sh  format.sh  lint.sh  setup.sh  start.sh  test.sh  test_cuda.sh  verify.sh
tests/: test_platform_detection.py  test_startup.py
