[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllmserver"
version = "1.0.0"
description = "Production vLLM inference server with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.22.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "types-prometheus-client>=0.20.0",
]
gpu = [
    "vllm>=0.19.1",
]

[project.scripts]
vllm-server = "main:main"

[tool.uv]
include-group = ["dev"]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff Linter Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "RUF",    # Ruff-specific rules
    "ASYNC",  # async/await
    "C90",    # McCabe complexity
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "W503",   # Line break before binary operator (conflicts with formatter)
]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/*" = ["ARG001"]    # Allow unused arguments in test fixtures

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false

# ──────────────────────────────────────────────────────────────────────────────
# Black Code Formatter Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ──────────────────────────────────────────────────────────────────────────────
# MyPy Type Checking Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "vllm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "slow: mark test as slow",
]
